--- a/src/main/resources/templates/instructorDashboard/fragments/profileContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/profileContent.html
@@ -21,7 +21,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <a class="btn btn-primary px-4" th:href="@{/profile/edit}"><i class="bi bi-pencil-square me-2"></i>Edit Profile</a>
+                        <a class="btn btn-primary px-4" th:href="@{/profile/edit}"><i class="bi bi-pencil-square me-2"></i>Edit</a>
                     </div>
                 </div>
             </div>
