--- a/src/main/resources/templates/instructorDashboard/fragments/topbarUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/topbarUpdate.html
@@ -128,8 +128,7 @@
                 <hr class="dropdown-divider">
               </li>
               <!-- Links -->
-              <li><a class="dropdown-item" th:href="@{/profile/edit}"><i class="bi bi-person fa-fw me-2"></i>Edit
-                Profile</a></li>
+              <li><a class="dropdown-item" th:href="@{/profile}"><i class="bi bi-person fa-fw me-2"></i>Profile</a></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-gear fa-fw me-2"></i>Account Settings</a>
               </li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-info-circle fa-fw me-2"></i>Help</a>
