--- a/src/main/resources/templates/userPage/fragmentLessonVideo/mainContentLessonVideo.html
+++ b/src/main/resources/templates/userPage/fragmentLessonVideo/mainContentLessonVideo.html
@@ -37,7 +37,7 @@
 
                             <!-- Instructor detail START -->
                             <div class="col-12">
-                                <div class="d-sm-flex justify-content-sm-between align-items-center">
+                                <div class="d-sm-flex justify-content-sm-between align-items-center ms-2 mb-2">
                                     <!-- Avatar detail -->
                                     <div class="d-flex align-items-center">
                                         <!-- Avatar image -->
@@ -821,7 +821,7 @@
                                             <span class="mb-0" th:text="${chapter.title}">Introduction of Digital
                                                 Marketing</span>
                                             <span class="small d-block mt-1"
-                                                th:text="${chapter.lessons.size() + ' lecture' + (chapter.lessons.size() > 1 ? 's' : '')}">(3
+                                                th:text="${chapter.lessons.size() + ' Lessons' + (chapter.lessons.size() > 1 ? 's' : '')}">(3
                                                 Lectures)</span>
                                         </a>
                                     </h6>
@@ -833,20 +833,30 @@
                                             <div class="vstack gap-3">
 
                                                 <!-- Progress bar -->
-                                                <div class="overflow-hidden">
+                                                <th:block th:with="progress=${chapterProgressMap[chapter.chapterId]}">
                                                     <div class="d-flex justify-content-between">
-                                                        <p class="mb-1 h6">1/3 Completed</p>
-                                                        <h6 class="mb-1 text-end">30%</h6>
+                                                        <p class="mb-1 h6"
+                                                           th:text="${progress.completedLessons + '/' + progress.totalLessons + ' Completed'}">
+                                                            0/0 Completed
+                                                        </p>
+                                                        <h6 class="mb-1 text-end"
+                                                            th:text="${#numbers.formatDecimal(progress.percent, 0, 0) + '%'}">
+                                                            0%
+                                                        </h6>
                                                     </div>
+
                                                     <div class="progress progress-sm bg-primary bg-opacity-10">
                                                         <div class="progress-bar bg-primary aos" role="progressbar"
-                                                            data-aos="slide-right" data-aos-delay="200"
-                                                            data-aos-duration="1000" data-aos-easing="ease-in-out"
-                                                            style="width: 30%" aria-valuenow="30" aria-valuemin="0"
-                                                            aria-valuemax="100">
+                                                             data-aos-delay="200"
+                                                             data-aos-duration="1000" data-aos-easing="ease-in-out"
+                                                             th:style="'width:' + ${progress.percent} + '%'"
+                                                             th:aria-valuenow="${progress.percent}"
+                                                             aria-valuemin="0" aria-valuemax="100">
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </th:block>
+
+
 
                                                 <!-- Course lecture -->
                                                 <div th:each="lesson : ${chapter.lessons}"
