--- a/src/main/resources/templates/homePage/cart.html
+++ b/src/main/resources/templates/homePage/cart.html
@@ -1,39 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
 
-<!-- Mirrored from stackbros.in/eduport/landing/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jun 2025 07:32:41 GMT -->
-<div th:replace="~{homePage/fragments/header :: header}"></div>
+<!--&lt;!&ndash; Mirrored from stackbros.in/eduport/landing/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jun 2025 07:32:41 GMT &ndash;&gt;-->
+<!--<div th:replace="~{homePage/fragments/header :: header}"></div>-->
 
-<body>
+<!--<body>-->
 
-<!-- Header START -->
-    <!-- Logo Nav START -->
-    <div th:replace="~{homePage/fragments/navHeader :: navHeader}"></div>
-    <!-- Logo Nav END -->
+<!--&lt;!&ndash; Header START &ndash;&gt;-->
+<!--    &lt;!&ndash; Logo Nav START &ndash;&gt;-->
+<!--    <div th:replace="~{homePage/fragments/navHeader :: navHeader}"></div>-->
+<!--    &lt;!&ndash; Logo Nav END &ndash;&gt;-->
 
-<!-- Header END -->
+<!--&lt;!&ndash; Header END &ndash;&gt;-->
 
-<!-- **************** MAIN CONTENT START **************** -->
-<div th:replace="~{homePage/fragments/cartContent :: cartContent}"></div>
-<!-- **************** MAIN CONTENT END **************** -->
+<!--&lt;!&ndash; **************** MAIN CONTENT START **************** &ndash;&gt;-->
+<!--<div th:replace="~{homePage/fragments/cartContent :: cartContent}"></div>-->
+<!--&lt;!&ndash; **************** MAIN CONTENT END **************** &ndash;&gt;-->
 
-<!-- =======================
-Footer START -->
-<div th:replace="~{homePage/fragments/footer :: footer}"></div>
-<!-- =======================
-Footer END -->
+<!--&lt;!&ndash; =======================-->
+<!--Footer START &ndash;&gt;-->
+<!--<div th:replace="~{homePage/fragments/footer :: footer}"></div>-->
+<!--&lt;!&ndash; =======================-->
+<!--Footer END &ndash;&gt;-->
 
-<!-- Back to top -->
-<div class="back-top"><i class="bi bi-arrow-up-short position-absolute top-50 start-50 translate-middle"></i></div>
+<!--&lt;!&ndash; Back to top &ndash;&gt;-->
+<!--<div class="back-top"><i class="bi bi-arrow-up-short position-absolute top-50 start-50 translate-middle"></i></div>-->
 
-<!-- Bootstrap JS -->
-<script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/vendor/choices/js/choices.min.js"></script>
+<!--&lt;!&ndash; Bootstrap JS &ndash;&gt;-->
+<!--<script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>-->
+<!--<script src="assets/vendor/choices/js/choices.min.js"></script>-->
 
-<!-- Template Functions -->
-<script src="assets/js/functions.js"></script>
+<!--&lt;!&ndash; Template Functions &ndash;&gt;-->
+<!--<script src="assets/js/functions.js"></script>-->
 
-</body>
+<!--</body>-->
 
-<!-- Mirrored from stackbros.in/eduport/landing/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jun 2025 07:32:41 GMT -->
-</html>
+<!--&lt;!&ndash; Mirrored from stackbros.in/eduport/landing/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jun 2025 07:32:41 GMT &ndash;&gt;-->
+<!--</html>-->
