--- a/src/main/resources/templates/userPage/fragments/mainContent.html
+++ b/src/main/resources/templates/userPage/fragments/mainContent.html
@@ -59,7 +59,8 @@
                                     <div class="overflow-hidden mt-3">
                                         <div class="d-flex justify-content-between">
                                             <h6 class="uppercase">Overall Progress</h6>
-                                            <span class="h6 mb-0" th:text="${progress + '%'}">20%</span>
+                                            <span class="h6 mb-0"
+                                                th:text="${#numbers.formatDecimal(progress, 1, 2) + '%'}">20%</span>
                                         </div>
                                         <div class="progress progress-sm bg-success bg-opacity-10">
                                             <div class="progress-bar bg-success aos" role="progressbar"
@@ -76,8 +77,10 @@
                                     <div class="d-flex justify-content-between align-items-center mt-3">
                                         <!-- List -->
                                         <ul class="nav nav-divider small mb-0">
-                                            <li class="nav-item h6 mb-0" th:text="${'Week ' + weeksEnrolled}">Week 2</li>
-                                            <li class="nav-item" th:text="${'Lessons ' + numberOfCompletedLessons}">Lecture 12</li>
+                                            <li class="nav-item h6 mb-0" th:text="${'Week ' + weeksEnrolled}">Week 2
+                                            </li>
+                                            <li class="nav-item" th:text="${'Lessons ' + numberOfCompletedLessons}">
+                                                Lecture 12</li>
                                         </ul>
 
                                         <!-- Dropdown -->
@@ -103,10 +106,14 @@
                             </a>
                             <!-- Content -->
                             <div class="ms-3">
-                                <a th:href="@{/learning/course/view(courseId=${course.courseId})}" class="d-inline-block text-truncate mb-0 h6 fw-normal stretched-link" th:text="${currentLesson.title}">Quiz -
+                                <a th:href="@{/learning/course/view(courseId=${course.courseId})}"
+                                    class="d-inline-block text-truncate mb-0 h6 fw-normal stretched-link"
+                                    th:text="${currentLesson.title}">Quiz -
                                     Digital Marketing</a>
                                 <ul class="nav nav-divider small mb-0">
-                                    <li class="nav-item" th:text="'Last updated ' + ${#temporals.format(currentLesson.updatedAt, 'MM/yyyy')}">12 June</li>
+                                    <li class="nav-item"
+                                        th:text="'Last updated ' + ${#temporals.format(currentLesson.updatedAt, 'MM/yyyy')}">
+                                        12 June</li>
                                     <li class="nav-item" th:text="${currentLesson.contentType}">20 pts</li>
                                     <li class="nav-item" th:text="${currentLesson.duration/60 +'min'}">30 min</li>
                                 </ul>
