--- a/src/main/resources/templates/homePage/index-8.html
+++ b/src/main/resources/templates/homePage/index-8.html
@@ -196,10 +196,10 @@
 								<ul class="dropdown-menu dropdown-menu-start" data-bs-popper="none">
 									<li> <a class="dropdown-item" href="shop.html">Shop grid</a></li>
 									<li> <a class="dropdown-item" href="shop-product-detail.html">Product detail</a></li>
-									<li> <a class="dropdown-item" href="cart.html">Cart</a></li>
+									<li> <a class="dropdown-item" href="/cart">Cart</a></li>
 									<li> <a class="dropdown-item" href="checkout.html">Checkout</a></li>
 									<li> <a class="dropdown-item" href="empty-cart.html">Empty Cart</a></li>
-									<li> <a class="dropdown-item" href="wishlist.html">Wishlist</a></li>
+									<li> <a class="dropdown-item" href="/wishlist">Wishlist</a></li>
 								</ul>
 							</li>
 
