--- a/src/main/resources/templates/homePage/index-9.html
+++ b/src/main/resources/templates/homePage/index-9.html
@@ -196,10 +196,10 @@
 								<ul class="dropdown-menu dropdown-menu-start" data-bs-popper="none">
 									<li> <a class="dropdown-item" href="shop.html">Shop grid</a></li>
 									<li> <a class="dropdown-item" href="shop-product-detail.html">Product detail</a></li>
-									<li> <a class="dropdown-item" href="cart.html">Cart</a></li>
+									<li> <a class="dropdown-item" href="/cart">Cart</a></li>
 									<li> <a class="dropdown-item" href="checkout.html">Checkout</a></li>
 									<li> <a class="dropdown-item" href="empty-cart.html">Empty Cart</a></li>
-									<li> <a class="dropdown-item" href="wishlist.html">Wishlist</a></li>
+									<li> <a class="dropdown-item" href="/wishlist">Wishlist</a></li>
 								</ul>
 							</li>
 
@@ -808,7 +808,7 @@ About START -->
 				<!-- List -->
 				<ul class="list-group list-group-borderless mt-4">
 					<li class="list-group-item h6 d-flex fw-normal mb-0"><i class="bi bi-patch-check-fill text-success me-2"></i>You will never think that knowing education</li>
-					<li class="list-group-item h6 d-flex fw-normal mb-0"><i class="bi bi-patch-check-fill text-success me-2"></i>Never mess with education and here’s the reason why</li>
+					<li class="list-group-item h6 d-flex fw-normal mb-0"><i class="bi bi-patch-check-fill text-success me-2"></i>Never mess with education and here's the reason why</li>
 					<li class="list-group-item h6 d-flex fw-normal mb-0"><i class="bi bi-patch-check-fill text-success me-2"></i>This is why this year will be the year of education</li>
 				</ul>
 
