--- a/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent_new.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent_new.html
@@ -474,15 +474,11 @@
         function playVideo(element) {
             var publicId = element.getAttribute('data-videoid');
             if (!publicId) return;
-            fetch('/api/video/signed-url?publicId=' + encodeURIComponent(publicId))
-                .then(response => response.text())
-                .then(url => {
-                    var video = document.getElementById('modalVideo');
-                    video.src = url;
-                    var modal = new bootstrap.Modal(document.getElementById('videoModal'));
-                    modal.show();
-                    video.play();
-                });
+            var video = document.getElementById('modalVideo');
+            video.src = '/api/video/stream/video/' + encodeURIComponent(publicId);
+            var modal = new bootstrap.Modal(document.getElementById('videoModal'));
+            modal.show();
+            video.play();
         }
 
         function stopVideo() {
@@ -494,15 +490,11 @@
         document.getElementById('playVideoBtn').addEventListener('click', function() {
             var publicId = this.getAttribute('data-publicid');
             if (!publicId) return;
-            fetch('/api/video/signed-url?publicId=' + encodeURIComponent(publicId))
-                .then(res => res.text())
-                .then(url => {
-                    var video = document.getElementById('modalVideo');
-                    video.src = url;
-                    var modal = new bootstrap.Modal(document.getElementById('videoModal'));
-                    modal.show();
-                    video.play();
-                });
+            var video = document.getElementById('modalVideo');
+            video.src = '/api/stream/video/' + encodeURIComponent(publicId);
+            var modal = new bootstrap.Modal(document.getElementById('videoModal'));
+            modal.show();
+            video.play();
         });
 
         document.getElementById('videoModal').addEventListener('hidden.bs.modal', function () {
